@@ -1,5 +1,10 @@
 2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>
 
+	* Sybase.py: Corrected tests test_description and test_rowcount -
+	"This routine cannot be called because another command structure
+	has results pending." when manually commiting after a select
+	without fetching
+
 	* Sybase.py: Corrected test test_ExceptionsAsConnectionAttributes
 	- Added Exceptions as attributes of Connection based on patch by
 	Greg Ward
